--- a/src/app/modules/tour-dairy/tour-dairy-zm/tour-dairy-zm.component.html
+++ b/src/app/modules/tour-dairy/tour-dairy-zm/tour-dairy-zm.component.html
@@ -1,4 +1,4 @@
-<div class=" px-10  sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-scroll bg-card dark:bg-transparent">
+<div class="px-10  sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 overflow-y-scroll overflow-x-hidden bg-card dark:bg-transparent">
 
 
     <div class="row pt-3">
@@ -61,39 +61,39 @@
 
                             </div>
 
-                            <div class="col-lg-12 mt-2">
+                            <div class="col-lg-12 mt-2 p-0 overflow-scroll">
                                 <table class="table ">
                                     <thead>
                                     <tr class="table-header-background text-center">
-                                        <th>Date</th>
-                                        <th colspan="2">Departure from</th>
-                                        <th colspan="2">Arrival at</th>
-                                        <th colspan="6">Portfolio of the branch visited</th>
-                                        <th colspan="3">Recovery</th>
-                                        <th rowspan="4">No. of loan cases in which recovery suits have been filed in Banking Court by the
+                                        <th class="border-r">Date</th>
+                                        <th colspan="2" class="border-r">Departure from</th>
+                                        <th colspan="2" class="border-r">Arrival at</th>
+                                        <th colspan="6" class="border-r">Portfolio of the branch visited</th>
+                                        <th colspan="3" class="border-r">Recovery</th>
+                                        <th rowspan="4" class="border-r">No. of loan cases in which recovery suits have been filed in Banking Court by the
                                             branch
                                         </th>
                                     </tr>
                                     <tr class="table-header-background text-center">
-                                        <th rowspan="2"></th>
-                                        <th rowspan="2">Place</th>
-                                        <th rowspan="2">Time</th>
-                                        <th rowspan="2">Place</th>
-                                        <th rowspan="2">Time</th>
-                                        <th colspan="2">General</th>
-                                        <th colspan="2">NPL's</th>
-                                        <th colspan="2">Sam</th>
-                                        <th rowspan="2">No. of Demand Notices issued by the branch</th>
-                                        <th rowspan="2">No. of Legal Notices issued by the branch</th>
-                                        <th rowspan="2">No. of Notices issued by the branch to SPA/Guarantors</th>
+                                        <th rowspan="2" class="border-r"></th>
+                                        <th rowspan="2" class="border-r">Place</th>
+                                        <th rowspan="2" class="border-r">Time</th>
+                                        <th rowspan="2" class="border-r">Place</th>
+                                        <th rowspan="2" class="border-r">Time</th>
+                                        <th colspan="2" class="border-r">General</th>
+                                        <th colspan="2" class="border-r">NPL's</th>
+                                        <th colspan="2" class="border-r">Sam</th>
+                                        <th rowspan="2" class="border-r">No. of Demand Notices issued by the branch</th>
+                                        <th rowspan="2" class="border-r">No. of Legal Notices issued by the branch</th>
+                                        <th rowspan="2" class="border-r">No. of Notices issued by the branch to SPA/Guarantors</th>
                                     </tr>
                                     <tr class="table-header-background text-center">
-                                        <th>No.</th>
-                                        <th>Amt.</th>
-                                        <th>No.</th>
-                                        <th>Amt.</th>
-                                        <th>No.</th>
-                                        <th>Amt.</th>
+                                        <th class="border-r">No.</th>
+                                        <th class="border-r">Amt.</th>
+                                        <th class="border-r">No.</th>
+                                        <th class="border-r">Amt.</th>
+                                        <th class="border-r">No.</th>
+                                        <th class="border-r">Amt.</th>
                                     </tr>
                                     </thead>
                                     <tbody>
@@ -143,27 +143,27 @@
                                 </table>
                             </div>
 
-                            <div class="col-lg-12 mt-2">
+                            <div class="col-lg-12 mt-2 p-0 overflow-scroll">
                                 <table class="table ">
                                     <thead>
                                     <tr class="table-header-background text-center">
-                                        <th rowspan="2">No. of loan cases in which Recovery Schedule/Revised Recovery Schedules have not
+                                        <th rowspan="2" class="border-r">No. of loan cases in which Recovery Schedule/Revised Recovery Schedules have not
                                             been issued to borrowers
                                         </th>
-                                        <th rowspan="2">Whether checked that MCOs and Branch Manager’s tour diaries are as per approved Tour
+                                        <th rowspan="2" class="border-r">Whether checked that MCOs and Branch Manager’s tour diaries are as per approved Tour
                                             Plan
                                         </th>
-                                        <th rowspan="2">Any short comings in Tour Diaries of MCOs/Branch Manager</th>
-                                        <th rowspan="2">No. of zero recovery cases of the branch</th>
-                                        <th colspan="2">No. of loan cases where Reschedulement/Restructuring/write-off remission of mark-up
+                                        <th rowspan="2" class="border-r">Any short comings in Tour Diaries of MCOs/Branch Manager</th>
+                                        <th rowspan="2" class="border-r">No. of zero recovery cases of the branch</th>
+                                        <th colspan="2" class="border-r">No. of loan cases where Reschedulement/Restructuring/write-off remission of mark-up
                                             done by the branch
                                         </th>
-                                        <th rowspan="2">No. of Defaulters contacted by the Z.M (Rec. & SAM)</th>
-                                        <th rowspan="2">Remarks</th>
+                                        <th rowspan="2" class="border-r">No. of Defaulters contacted by the Z.M (Rec. & SAM)</th>
+                                        <th rowspan="2" class="border-r">Remarks</th>
                                     </tr>
                                     <tr class="table-header-background text-center">
-                                        <th>Activity</th>
-                                        <th>No.</th>
+                                        <th class="border-r">Activity</th>
+                                        <th class="border-r">No.</th>
                                     </tr>
                                     </thead>
                                     <tbody>
@@ -213,38 +213,38 @@
                                 </table>
                             </div>
 
-                            <div class="col-lg-12 mt-2">
+                            <div class="col-lg-12 mt-2 p-0 overflow-scroll">
                                 <table class="table ">
                                     <thead>
                                     <tr class="table-header-background text-center">
-                                        <th colspan="15">RECOVERY</th>
+                                        <th colspan="15" class="border-r">RECOVERY</th>
                                     </tr>
                                     </thead>
                                     <thead>
                                     <tr class="table-header-background text-center">
                                         <!-- UTILIZATIONS -->
-                                        <th colspan="3">Amount in default up to the month under report (TARGET)</th>
-                                        <th colspan="3">Recovery during the month under report</th>
-                                        <th colspan="3">Balance Recoverable</th>
-                                        <th colspan="3">Recovery during corresponding period</th>
-                                        <th rowspan="2">Increase/Deficit</th>
-                                        <th colspan="2">Reschedulement/Restructuring/Write-off/Remission cases of the branch visited</th>
+                                        <th colspan="3" class="border-r">Amount in default up to the month under report (TARGET)</th>
+                                        <th colspan="3" class="border-r">Recovery during the month under report</th>
+                                        <th colspan="3" class="border-r">Balance Recoverable</th>
+                                        <th colspan="3" class="border-r">Recovery during corresponding period</th>
+                                        <th rowspan="2" class="border-r">Increase/Deficit</th>
+                                        <th colspan="2" class="border-r">Reschedulement/Restructuring/Write-off/Remission cases of the branch visited</th>
                                     </tr>
                                     <tr class="table-header-background text-center">
-                                        <th>P.D.</th>
-                                        <th>C.D.</th>
-                                        <th>Total</th>
-                                        <th>P.D.</th>
-                                        <th>C.D.</th>
-                                        <th>Total</th>
-                                        <th>P.D.</th>
-                                        <th>C.D.</th>
-                                        <th>Total</th>
-                                        <th>P.D.</th>
-                                        <th>C.D.</th>
-                                        <th>Total</th>
-                                        <th>Activity</th>
-                                        <th>No.</th>
+                                        <th class="border-r">P.D.</th>
+                                        <th class="border-r">C.D.</th>
+                                        <th class="border-r">Total</th>
+                                        <th class="border-r">P.D.</th>
+                                        <th class="border-r">C.D.</th>
+                                        <th class="border-r">Total</th>
+                                        <th class="border-r">P.D.</th>
+                                        <th class="border-r">C.D.</th>
+                                        <th class="border-r">Total</th>
+                                        <th class="border-r">P.D.</th>
+                                        <th class="border-r">C.D.</th>
+                                        <th class="border-r">Total</th>
+                                        <th class="border-r">Activity</th>
+                                        <th class="border-r">No.</th>
                                     </tr>
                                     </thead>
                                     <tbody>
