--- a/src/app/modules/tour-dairy/tour-diary-rc/tour-diary-rc.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-rc/tour-diary-rc.component.html
@@ -1,4 +1,4 @@
-<div class=" px-10  sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-scroll bg-card dark:bg-transparent">
+<div class="px-10  sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 overflow-y-scroll overflow-x-hidden bg-card dark:bg-transparent">
 
 
     <div class="row pt-3">
@@ -61,36 +61,36 @@
 
                             </div>
 
-                            <div class="col-lg-12 mt-2">
+                            <div class="col-lg-12 mt-2 p-0 overflow-scroll">
                                 <table class="table ">
                                     <thead>
                                     <tr class="table-header-background text-center">
-                                        <th rowspan="3">Date</th>
-                                        <th colspan="2" rowspan="2">Departure from</th>
-                                        <th colspan="2" rowspan="2">Arrival at</th>
-                                        <th colspan="6">Portfolio of the Province/Zone/Branch/Circle (Can See Portfolio For Both)</th>
-                                        <th rowspan="3">No. of defaulters contacted </th>
-                                        <th rowspan="3">Results of contacts so made
+                                        <th rowspan="3" class="border-r">Date</th>
+                                        <th colspan="2" rowspan="2" class="border-r">Departure from</th>
+                                        <th colspan="2" rowspan="2" class="border-r">Arrival at</th>
+                                        <th colspan="6" class="border-r">Portfolio of the Province/Zone/Branch/Circle (Can See Portfolio For Both)</th>
+                                        <th rowspan="3" class="border-r">No. of defaulters contacted </th>
+                                        <th rowspan="3" class="border-r">Results of contacts so made
                                         </th>
                                     </tr>
 
                                     <tr class="table-header-background text-center">
-                                        <th colspan="2">General</th>
-                                        <th colspan="2">NPLs</th>
-                                        <th colspan="2">SAM</th>
+                                        <th colspan="2" class="border-r">General</th>
+                                        <th colspan="2" class="border-r">NPLs</th>
+                                        <th colspan="2" class="border-r">SAM</th>
                                     </tr>
 
                                     <tr class="table-header-background text-center">
-                                        <th>Place</th>
-                                        <th>Time</th>
-                                        <th>Place</th>
-                                        <th>Time</th>
-                                        <th>No.</th>
-                                        <th>Amt.</th>
-                                        <th>No.</th>
-                                        <th>Amt.</th>
-                                        <th>No.</th>
-                                        <th>Amt.</th>
+                                        <th class="border-r">Place</th>
+                                        <th class="border-r">Time</th>
+                                        <th class="border-r">Place</th>
+                                        <th class="border-r">Time</th>
+                                        <th class="border-r">No.</th>
+                                        <th class="border-r">Amt.</th>
+                                        <th class="border-r">No.</th>
+                                        <th class="border-r">Amt.</th>
+                                        <th class="border-r">No.</th>
+                                        <th class="border-r">Amt.</th>
                                     </tr>
                                     </thead>
                                     <tbody>
@@ -148,37 +148,37 @@
                                 </table>
                             </div>
 
-                            <div class="col-lg-12 mt-2">
+                            <div class="col-lg-12 mt-2 p-0 overflow-scroll">
                                 <table class="table ">
                                     <thead>
                                     <tr class="table-header-background text-center">
-                                        <th colspan="15">RECOVERY</th>
+                                        <th colspan="15" class="border-r">RECOVERY</th>
                                     </tr>
                                     </thead>
                                     <thead>
                                     <tr class="table-header-background text-center">
                                         <!-- UTILIZATIONS -->
-                                        <th colspan="3">Annual Target/Recoverable of Province/Zone/Branch/Circle</th>
-                                        <th colspan="3">Recovery during the month under report</th>
-                                        <th colspan="3">Balance Recoverable</th>
-                                        <th colspan="3">Recovery during corresponding period</th>
-                                        <th rowspan="2">Increase/Deficit</th>
-                                        <th rowspan="2">Measures/Efforts for boosting up recovery</th>
-                                        <th rowspan="2">Remarks</th>
+                                        <th colspan="3" class="border-r">Annual Target/Recoverable of Province/Zone/Branch/Circle</th>
+                                        <th colspan="3" class="border-r">Recovery during the month under report</th>
+                                        <th colspan="3" class="border-r">Balance Recoverable</th>
+                                        <th colspan="3" class="border-r">Recovery during corresponding period</th>
+                                        <th rowspan="2" class="border-r">Increase/Deficit</th>
+                                        <th rowspan="2" class="border-r">Measures/Efforts for boosting up recovery</th>
+                                        <th rowspan="2" class="border-r">Remarks</th>
                                     </tr>
                                     <tr class="table-header-background text-center">
-                                        <th>P.D.</th>
-                                        <th>C.D.</th>
-                                        <th>Total</th>
-                                        <th>P.D.</th>
-                                        <th>C.D.</th>
-                                        <th>Total</th>
-                                        <th>P.D.</th>
-                                        <th>C.D.</th>
-                                        <th>Total</th>
-                                        <th>P.D.</th>
-                                        <th>C.D.</th>
-                                        <th>Total</th>
+                                        <th class="border-r">P.D.</th>
+                                        <th class="border-r">C.D.</th>
+                                        <th class="border-r">Total</th>
+                                        <th class="border-r">P.D.</th>
+                                        <th class="border-r">C.D.</th>
+                                        <th class="border-r">Total</th>
+                                        <th class="border-r">P.D.</th>
+                                        <th class="border-r">C.D.</th>
+                                        <th class="border-r">Total</th>
+                                        <th class="border-r">P.D.</th>
+                                        <th class="border-r">C.D.</th>
+                                        <th class="border-r">Total</th>
                                     </tr>
                                     </thead>
                                     <tbody>
